# llm-dns-proxy

./: .env.example  README.md  pyproject.toml
llm_dns_proxy/: __init__.py  chunking.py  cli.py  client.py  config.py  crypto.py  llm.py  native_crypto.py  server.py  version.py
tests/: __init__.py  test_chunking.py  test_crypto.py  test_integration.py  test_llm.py  test_native_crypto.py
